force-app/main/default/objects/Event__c/fields/Menu_Header__c.field-meta.xml
<CustomField>
    <fullName>Menu_Header__c</fullName>
    <label>Menu Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>