force-app/main/default/objects/Event__c/fields/Menu_Text__c.field-meta.xml
<CustomField>
    <fullName>Menu_Text__c</fullName>
    <label>Menu Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>