force-app/main/default/objects/Event__c/fields/Public_Links__c.field-meta.xml
<CustomField>
    <fullName>Public_Links__c</fullName>
    <formula>HYPERLINK( $Setup.Site_Settings__c.Site_URL_Base__c + &apos;/Menu?id=&apos; + Id, &apos;Menu&apos;, &apos;_blank&apos;) 
+ &quot; | &quot; +
HYPERLINK($Setup.Site_Settings__c.Site_URL_Base__c + &apos;/ManageOrders?id=&apos; + Id, &apos;Manage Orders&apos;, &apos;_blank&apos;)
+ &quot; | &quot; +
HYPERLINK($Setup.Site_Settings__c.Site_URL_Base__c + &apos;/Overview?id=&apos; + Id, &apos;Overview&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Public Links</label>
    <type>Text</type>
</CustomField>